:memo:中国近现代史纲要 part2完结

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -889,12 +889,12 @@
 
 20.几组三对三关系：
 
-| 三大法宝                                             | 统一战线               | 武装斗争                   | 党的建设                                           |
-| ---------------------------------------------------- | ---------------------- | -------------------------- | -------------------------------------------------- |
-| 中国革命道路的内容(工农武装割据要处理好的三个方面是) | 土地革命(基本内容)     | 武装斗争(主要形式)         | 农村革命根据地建设(依托)                           |
-| 毛泽东思想活的灵魂的三个基本方面                     | 实事求是(根本思想路线) | 群众路线(根本工作路线)     | 独立自主(根本政治原则)                             |
-| 党的优良传统(三大优良作风)                           | 理论联系实际           | 密切联系群众(最大政治优势) | 批评与自我批评(中国共产党区别于其他政党的显著标志) |
-| 巩固抗日民族统一战线的策略总方针                     | 发展进步势力           | 争取中间势力               | 孤立顽固势力                                       |
+| 三大法宝（中国共产党在中国革命中战胜敌人的主要法宝） | 统一战线                       | 武装斗争                                           | 党的建设                                           |
+| ---------------------------------------------------- | ------------------------------ | -------------------------------------------------- | -------------------------------------------------- |
+| 中国革命道路的内容(工农武装割据要处理好的三个方面是) | 土地革命(基本内容)             | 武装斗争(主要形式)                                 | 农村革命根据地建设(依托)                           |
+| 毛泽东思想活的灵魂的三个基本方面                     | 实事求是(根本思想路线)         | 群众路线(根本工作路线)                             | 独立自主(根本政治原则)                             |
+| 党的优良传统(三大优良作风)                           | 理论联系实际                   | 密切联系群众(最大政治优势)                         | 批评与自我批评(中国共产党区别于其他政党的显著标志) |
+| 巩固抗日民族统一战线的策略总方针                     | 发展进步势力（城市小资产阶级） | 争取中间势力（民族资产阶级、地方实力派、开明绅士） | 孤立顽固势力                                       |
 
 21.中国革命建立最广泛的统一战线不仅是必要的，而且是**可能的**，这种可能是由**半殖民地半封建的中国社会的交织交织在一起的诸多矛盾所决定的**。
 
@@ -925,7 +925,7 @@
 
 * 对于中国革命经验教训的概括和总结（不属于**客观条件**）
 
-07.抗日战争时期中共巩固和扩大抗日民主统一战线的策略方针——**发展进步势力、争取中间势力、孤立顽固势力**。抗日战争时期中共对顽固派斗争的策略——**有理、有利、有节**。
+07.抗日战争时期中共巩固和扩大抗日民主统一战线的策略方针——**发展进步势力、争取中间势力、孤立顽固势力**。抗日战争时期中共对**顽固派**斗争的策略——**有理、有利、有节**。
 
 08.毛泽东提出，无产阶级及其政党要实现对同盟者的领导必须具备的条件有：
 
@@ -1033,7 +1033,7 @@
 | 第二步 | 属于**半社会主义**性质         |
 | 第三步 | 基本上成为**社会主义国营**性质 |
 
-32.第一步实行初级形式的国家资本主义。国家在私营工业中实行**委托加工、计划订货、统购包销**，这主要是**同资本家在企业外部的合作**。
+32.第一步实行初级形式的国家资本主义。国家在私营工业中实行**委托加工、计划订货、统购包销**，这主要是**同资本家在企业外部的合作**。（初级形式的国家资本主义形式：**委托加工、计划订货、统购包销、公私合营**）
 
 022.新民主主义社会有五种经济成分，其中**主要的经济成分**有三种：
 
@@ -1045,6 +1045,8 @@
 
 1. 半社会主义性质的**合作社经济**（个体经济向社会主义集体经济过渡的形式）
 2. **国家资本主义经济**（私人资本主义经济向社会主义国营经济过渡的形式）
+
+总结：个体经济→合作社经济→社会主义集体经济；私人资本主义经济→国家资本主义经济→国营经济
 
 023.新民主主义时期三种不同性质的经济成分及与之相联系的三者基本的阶级力量之间的矛盾，集中表现为：
 
@@ -1480,7 +1482,7 @@
 
 021.具有**鲜明中国特色的新型政党制度的内容**：“**共产党领导、多党派合作，共产党执政，多党派参政**。”
 
-022.中国共产党**处理与各民主党派关系的方针**：“长期共存、互相监督、肝胆相照、荣辱与共。”
+022.中国共产党**处理与各民主党派关系的方针**：“长期共存、互相监督（前两者是毛泽东提出的）、肝胆相照、荣辱与共。（十六字方针是党的十二大报告增加的）”
 
 023.**统一战线**并**不用于**团结国际社会共同反对霸权主义、单边主义斗争。
 
@@ -1856,7 +1858,7 @@
 
 4.中国近代史上中国人民第一次大规模的反侵略武装斗争是**三元里人民的抗英斗争**。
 
-5.**《资政新篇》**主张在中国发展资本主义，实际上要进行政治、经济、文化制度的改革。
+5.**《资政新篇》**主张在中国发展资本主义，实际上要进行政治、经济、文化制度的改革。**没有涉及农民和土地问题**。
 
 《海国图志》仅仅主张向西方学习军事和科学技术。二者共同点是“**向西方学习**”。
 
@@ -1868,19 +1870,65 @@
 
 7.率先发出“**振兴中华**”呐喊的是**孙中山**。
 
+01.在近代中国社会的诸矛盾中，占支配地位的主要矛盾是**帝国主义和中华民族的矛盾、封建主义和人民大众的矛盾**。
+
+02.资本-帝国主义列强对中国实行
+
+1. 军事侵略
+2. 政治控制（控制中国内政外交、镇压中国人民的反抗、扶植收买代理人）
+3. 经济掠夺（控制中国的通商口岸）
+4. 文化渗透
+
+03.郑观应在所著《盛世危言》中提出一系列重要的思想启蒙意义的主张，包括：
+
+1. 大力发展民族工商业
+2. 同西方国家进行“商战”
+3. 设立议院
+4. 实现**“君民共主”**制度。（民主共和制度是孙中山提出的）
+
 ### 第二章 不同社会力量对国家出路的早期探索
 
 8.**“自强”“求富”**是洋务运动的**目标**。
 
-9.**“中学为体，西学为用”**是洋务派兴办洋务事业的**指导思想**。
+9.**“中学为体，西学为用”**是洋务派兴办洋务事业的**指导思想**，并**不激进**。
 
 10.采取**官督商办**的民用企业，虽然受官僚控制，发展受到很大限制，但基本上是**资本主义**性质的近代企业。
 
 11.**近代教育**开始于**洋务运动**。
 
-12.近代中国资产阶级思想与封建主义思想的**第一次正面交锋**是：**维新派与守旧派的论战**。第二次交锋是**革命派与改良派之间的论战**，论证焦点是**要不要以革命手段推翻清王朝**。
+12.近代中国资产阶级思想与封建主义思想的**第一次正面交锋**是：**维新派与守旧派的论战**，论战焦点是**要不要改良（变法、兴民权、设议院、实行君主立宪制，不要不要废八股、改科举和兴西学）**。第二次交锋是**革命派与改良派之间的论战**，论战焦点是**要不要以革命手段推翻清王朝**。
 
 13.维新派认为**兴民权、设议院，实行君主立宪制度**才是当时中国理想的政治方案。
+
+04.19世纪60-90年代，洋务派举办的洋务事业归纳起来主要有：
+
+1. 兴办近代企业
+2. 建立新式陆海军
+3. 创办新式学堂，派遣留学生
+
+05.1901-1911年，**清末“新政”**推行的改革内容：
+
+1. 颁布商法商律，奖励工商。
+2. 裁撤绿营，建立新军。
+
+06.洋务运动**失败的主要原因**：
+
+1. 洋务运动具有封建性
+2. 洋务运动对列强具有依赖性
+3. 洋务企业的管理具有腐朽性
+
+07.戊戌维新运动的失败，主要是由于：（不涉及帝国主义列强的粗暴干涉）
+
+1. 维新派自身的局限
+   * 首先，**不敢否定封建主义**，在政治上不敢根本否定封建君主制度，经济上，未触及封建主义的经济基础——封建土地所有制。
+   * 思想上，虽然提倡学习西学，却仍要打着孔子的旗号，借古代圣贤之名“托古改制”。
+   * 其次，**对帝国主义抱有幻想**。他们虽然大声疾呼救亡图存，却又幻想西方列强能帮助自己变法维新。
+   * 最后，**惧怕人民群众**。
+2. 以慈禧太后为首的强大的守旧势力的反对
+
+08.戊戌维新运动（百日维新）**未能成功地建立起资本主义的君主立宪制**。
+
+09.‌**中国民族资产阶级登上政治舞台的第一次表演**是**戊戌维新运动**‌。‌
 
 ### 第三章 辛亥革命与君主专制制度的终结
 
@@ -1924,10 +1972,35 @@
 
 第三条路的幻灭：
 
-1. **资产阶级建国方案在中国行不通**。首先，从民族资产阶级自身来看，民族资本主义经济的特点决定了民族资产阶级没有勇气和能力去领导人民进行反帝反封建的革命斗争，不能为资产阶级共和国扫清障碍。
+1. **资产阶级建国方案在中国行不通（根本原因，非主观原因）**。首先，从民族资产阶级自身来看，民族资本主义经济的特点决定了民族资产阶级没有勇气和能力去领导人民进行反帝反封建的革命斗争，不能为资产阶级共和国扫清障碍。
 2. **资产阶级两面性：革命性和软弱性**。其次，从当时中国所处的时代条件来看，帝国主义列强不可能使中国成为一个独立、富强的资本主义国家。再次，从中国的革命形势来看，国民党当局不允许任何阻止其一党专政的力量存在。
 
 20.资产阶级革命派的这些弱点、错误，从**根源**上讲，在于**中国民族资产阶级的软弱性和妥协性**。
+
+010.资产阶级革命派与改良派的根本不同之处在于：
+
+1. 在踏上革命道路时，就高举起民主革命的旗帜
+2. 选择以武装起义推翻清王朝统治的斗争方式
+
+011.革命派思想理论方面的弱点：
+
+* 反对贫苦农民“夺富人之田为己有”**
+* **没有正面鲜明地**提出反对帝国主义的主张
+
+012.**中国共产党一经诞生**，就把为中国人民谋幸福、为中华民族谋复兴确立为自己的初心和使命，**点亮了实现中华民族伟大复兴的灯塔**。
+
+013.辛亥革命失败后，资产阶级革命派为挽救共和制度而进行的斗争主要有：（保路运动发生在辛亥革命前）
+
+1. 二次革命
+2. 护国运动
+3. 护法运动
+
+014.中国共产党人是孙中山先生革命事业最坚定的支持者、最忠诚的合作者、最忠实的继承者。中国共产党：
+
+1. 在成立之初就提出反帝反封建的民主革命纲领（辛亥革命110周年讲话原文，“成立之初”指代党成立初期的一段时间，比较宽泛，不是特指**党的一大**这个时刻，实际上是二大才确立反帝反封纲领）
+2. 同孙中山先生领导的中国国民党携手合作，**帮助国民党完成改组**。
+3. 建立最广泛的革命统一战线，掀起轰轰烈烈的大革命，给北洋军阀反动统治以沉重打击。
+4. 不断实现和发展孙中山先生和辛亥革命先驱的伟大抱负。
 
 ### 第四章 中国共产党成立和中国革命新局面
 
@@ -1935,15 +2008,15 @@
 
 22.**五四运动**是中国革命的新阶段即**新民主主义革命阶段**的**开端**，发生在新文化运动之后。
 
-23.**工人阶级**是新民主主义革命的领导阶级，但不是主力军（民主革命的**主力军是农民**）
+23.1919年五四运动之后，**中国工人阶级开始以独立的姿态登上历史舞台**。**工人阶级**是新民主主义革命的领导阶级，但不是主力军（民主革命的**主力军是农民**）
 
 24.五四运动表现了**反帝反封建的彻底性**
 
 25.**五四运动**促进了马克思主义在中国的传播，拉开了新民主主义革命的序幕，**标志着中国青年成为推动总共社会变革的急先锋**。
 
-26.1919年五四运动，提出“改造强盗世界，不认秘密外交，实行民族自决”和“另起炉灶，组织新政府”这样的口号，表明**中国人民对帝国主义的认识尽到了理性认识的认识阶段**。
+26.1919年五四运动，提出“改造强盗世界，不认秘密外交，实行民族自决”和“另起炉灶，组织新政府”这样的口号，表明**中国人民对帝国主义的认识尽到了理性认识的认识阶段**（第一阶段是表明的**感性认识阶段**，比如义和团的笼统排外斗争）。
 
-27.甲午战争后，中国人民的民族意识**开始普遍觉醒**。五四运动后，**中国人民和中华民族自鸦片战争以来第一次全面觉醒**。
+27.甲午战争后，中国人民的民族意识**开始普遍觉醒**。**五四运动**后，**中国人民和中华民族自鸦片战争以来第一次全面觉醒**。
 
 28.**五四精神**的核心是**爱国主义**。
 
@@ -1972,6 +2045,51 @@
 
 39.大革命失败，主要指**反帝反封建的革命任务没有完成**。
 
+015.**1915年**兴起的初期**新文化运动的基本内容**：
+
+1. 提倡**民主和科学**，反对专制和迷信盲从；
+2. 提倡**个性解放**，反对封建礼教；
+3. 提倡新道德、反对旧道德；
+4. 提倡新文学、反对旧文学；
+
+016.新文化运动的倡导者们**批判孔学，但没有因此而否定中国的全部传统文化**。
+
+017.**五四运动以后的新文化运动**，才是**新民主主义的文化运动**。
+
+018.**把改造国民性置于优先地位**是**五四以前的新文化运动的主张**。
+
+019.**在上海成立的共产党早期组织，实际上是中国共产党的发起组织，是各地共产主义者进行党建活动的联络中心**。
+
+020.**十月革命**直接推翻的不是**沙皇专制统治**，而是1917年二月革命之后建立的**资产阶级临时政府**。**沙皇专制统治**是被**二月革命**推翻的。
+
+021.**中国共产党人的初心和使命**：
+
+1. 为中国人民谋幸福
+2. 为中华民族谋复兴
+
+022.伟大建党精神的内容：
+
+1. 坚持真理、坚守理想
+2. 践行初心、担当使命
+3. 不怕牺牲、英勇斗争
+4. 对党忠诚、不负人民
+
+023.1924年至1927年中国反帝反封建的革命，之所以被称作大革命，是因为与以往任何一次革命**包括辛亥革命和五四运动**相比，有很大不同，主要是：（不涉及革命背景更加复杂）
+
+1. 群众的动员程度更为广泛
+2. 斗争的规模更加宏伟
+3. 革命的社会内涵更为深刻
+
+024.**大革命时期(1924-1927)**，中国共产党人：
+
+1. 开始探索**马克思主义中国化**的途径
+2. 初步提出了**新民主主义革命的基本思想**
+3. 开始懂得**土地革命和掌握革命武装**的重要性
+
+025.**土地革命时期(1927-1937)**，中国共产党：
+
+1. 开始实行**“工农武装割据”**
+
 ### 第五章 中国革命的新道路
 
 40.1927年8月7日，中共中央在汉口召开的**八七会议**确定的**方针**是**土地革命和武装起义**，这是**由大革命失败到土地革命战争兴起**的历史性转变。
@@ -1996,7 +2114,7 @@
 | ---------------- | ------------------------------------------------------------ |
 | 土地革命战争时期 | （苏维埃政权）工农民主专政                                   |
 | 抗日战争时期     | 抗日民族统一战线性质、一切赞成抗日（反帝）又赞成民主的人们的政权 |
-| 解放战争时期     | 各革命阶级的联合专政                                         |
+| 解放战争时期     | 各革命阶级的联合专政（但是是**人民民主统一战线**）           |
 | 新中国成立初期   | 人民民主专政                                                 |
 
 47a.不同时期的**统一战线**：
@@ -2024,18 +2142,33 @@
 | --------------------------------- | ------------------------------------------------------------ |
 | 《论反对日本帝国主义的策略》-1935 | 系统说明了党的**政治策略**上的诸问题                         |
 | 《中国革命战争的战略问题》-1936   | 总结土地革命战争中党内在军事问题上的争论，系统说明了有关**中国革命战争战略方面**的诸问题 |
-| 《论持久战》-1938                 | 兵民是胜利之本                                               |
+| 《论持久战》-1938                 | 1.分析了中日双方存在着的互相矛盾的四个基本特点<br />2.批驳了“亡国论”“速胜论”，明确指出抗日战争是持久的，最后胜利属于中国。<br />3.准确预见了抗日战争由**防御到相持、最后到反攻的三个阶段**。<br />4.强调“**兵民是胜利之本**”，战胜日本的侵略，必须进行人民战争 |
 | 《中国革命和中国共产党》-1939     | 第一次提出了新民主主义革命的科学概念                         |
 
-| 时期                 | 著作                                                         |
-| -------------------- | ------------------------------------------------------------ |
-| 土地革命时期早期     | 1.《中国的红色政权为什么能够存在》论证**红色政权能长期存在并发展的主客观条件**<br />2.《井冈山的斗争》提出**工农武装割据的思想**<br />3.《星星之火，可以燎原》进一步阐述了中国革命只能走与资本主义国家不同的道路。提出了**党把工作重心由城市转移到农村**，在农村开展游击战争，深入进行土地革命，建立和发展红色政权，待条件成熟时再夺取全国政权的**中国革命新道路的思想**。<br />4.《反对本本主义》**初步阐明唯物辩证的思想路线**，即坚持理论与实际相结合的原则的极端重要性。提出**“没有调查就没有发言权”**，**革命道路理论的提出标志毛泽东思想==初步形成==**，==成熟==的标志是**新民主主义理论的系统阐述** |
-| 土地革命尾期         | 1.1935.12《论反对日本帝国主义的策略》阐明党的**抗日民族统一战线**新政策，系统解决了党的**政治路线**问题(解决政治问题会议是瓦窑堡会议)<br />《中国革命战争的战略问题》<br />《实践论》《矛盾论》批判了主观主义尤其是教条主义错误，**科学系统阐明党的马克思主义的思想路线** |
-| 抗日战争时期         | 1935年8月1日  《为抗日救国告全体同胞书》即**八一宣言**，呼吁全国各族各界同胞、各军队团结起来，停止内战，一致抗日；<br />《新民主主义论》新民主主义理论的系统阐明，标志着毛泽东思想达到成熟；<br />《论持久战》——兵民是胜利之本   <br />《〈共产党人〉发刊词》<br />《中国革命和中国共产党》第一次提出了新民主主义革命的科学概念 |
-| 延安整风运动         | 《改造我们的学习》-学风(党的高级干部) <br />《整顿党的作风》-党风(全党党员)<br />《反对党八股》-文风(全党党员)   <br />**延安整风运动**，对待犯错误同志的正确方针：**惩前毖后、治病救人**<br />**一切从实际出发（前提）、理论联系实际（途径和方法）、实事求是(实质、核心)、在实践中检验的和发展真理(验证条件、目的)**的==思想路线==**在全党范围确立起来**。 |
-| 新中国成立           | 《论人民民主专政》总结我们是工人阶级领导的，以工农联盟为基础的人民民主专政。我们还必须利用一切有利而不是有害城乡资本主义因素，团结民族资产阶级。民族资产阶级不能充当革命的领导者，也不应该在国家政权中占主要地位 |
-| 探索社会主义道路阶段 | 《论十大关系》基本**方针**——调动国内外一切积极因素为社会主义服务，是马义中国化**第二次结合**的标志，也是中国共产党人**开始探索社会主义道路的标志**。<br />《关于正确处理人民内部矛盾的问题》——仍然存在敌我矛盾、人民内部矛盾，正确处理人民内部矛盾是国家政治的主题<br />《一九五七年夏季的形势》——**六又政治局面**<br />《在晋绥干部会议上的讲话》1948年，**完整阐述了总路线的内容** |
-| 改革开放时期         | 邓小平《解放思想、实事求是、团结一致向前看》——中特理论的**宣言书**(第二个宣言书是南方谈话) |
+| 时期                                       | 著作                                                         |
+| ------------------------------------------ | ------------------------------------------------------------ |
+| 土地革命时期早期、中期（1927-1929-1934年） | 1.《中国的红色政权为什么能够存在》论证**红色政权能长期存在并发展的主客观条件**<br />2.《井冈山的斗争》提出**工农武装割据的思想**<br />3.《星星之火，可以燎原》进一步阐述了中国革命只能走与资本主义国家不同的道路。提出了**党把工作重心由城市转移到农村**，在农村开展游击战争，深入进行土地革命，建立和发展红色政权，待条件成熟时再夺取全国政权的**中国革命新道路的思想**。<br />4.1930年，《反对本本主义》**初步阐明唯物辩证的思想路线**，即坚持理论与实际相结合的原则的极端重要性。提出**“没有调查就没有发言权”**，**革命道路理论的提出标志毛泽东思想==初步形成==**，==成熟==的标志是**新民主主义理论的系统阐述**<br />1931年，《关于调查人口和土地状况的通知》——“不做正确的调查同样没有发言权” |
+| 土地革命尾期（1934-1937年）                | 1.1934年1月27日，毛泽东在江西瑞金第二次全国工农兵代表大会上提出“**关心群众生活，注意工作方法。**”<br />2.1935.12《论反对日本帝国主义的策略》阐明党的**抗日民族统一战线**新政策，系统解决了党的**政治路线**问题(解决政治问题会议是瓦窑堡会议)<br />3.《中国革命战争的战略问题》<br />4.《实践论》《矛盾论》批判了主观主义尤其是教条主义错误，**科学系统阐明党的马克思主义的思想路线** |
+| 抗日战争时期                               | 1935年8月1日  《为抗日救国告全体同胞书》即**八一宣言**，呼吁全国各族各界同胞、各军队团结起来，停止内战，一致抗日；<br />《新民主主义论》新民主主义理论的系统阐明，标志着毛泽东思想达到成熟；<br />《论持久战》——兵民是胜利之本   <br />《〈共产党人〉发刊词》<br />《中国革命和中国共产党》第一次提出了新民主主义革命的科学概念 |
+| 延安整风运动（1942年2月）                  | 《改造我们的学习》-学风(党的高级干部) <br />《整顿党的作风》-党风(全党党员)<br />《反对党八股》-文风(全党党员)   <br />**延安整风运动**，对待犯错误同志的正确方针：**惩前毖后、治病救人**<br />**一切从实际出发（前提）、理论联系实际（途径和方法）、实事求是(实质、核心)、在实践中检验的和发展真理(验证条件、目的)**的==思想路线==**在全党范围确立起来**。 |
+| 新中国成立                                 | 《论人民民主专政》总结我们是工人阶级领导的，以工农联盟为基础的人民民主专政。我们还必须利用一切有利而不是有害城乡资本主义因素，团结民族资产阶级。民族资产阶级不能充当革命的领导者，也不应该在国家政权中占主要地位 |
+| 探索社会主义道路阶段                       | 《论十大关系》基本**方针**——调动国内外一切积极因素为社会主义服务，是马义中国化**第二次结合**的标志，也是中国共产党人**开始探索社会主义道路的标志**。<br />《关于正确处理人民内部矛盾的问题》——仍然存在敌我矛盾、人民内部矛盾，正确处理人民内部矛盾是国家政治的主题<br />《一九五七年夏季的形势》——**六又政治局面**<br />《在晋绥干部会议上的讲话》1948年，**完整阐述了总路线的内容** |
+| 改革开放时期                               | 邓小平《解放思想、实事求是、团结一致向前看》——是党的十一届三中全会的**主题报告**，是解放思想、开辟新时期新道路的**宣言书**(第二个宣言书是南方谈话) |
+
+026.井冈山根据地的建立：
+
+1. 集中体现了中国革命的正确方向
+2. 点燃了工农武装割据的星星之火
+3. 为中国革命开辟出了农村包围城市、武装夺取政权这样一条前人没有走过的道路
+
+027.**农村包围城市、武装夺取政权的理论**，是在以**毛泽东为主要代表的中国共产党人同当时党内盛行的把马克思主义教条化、把共产国际决议和苏联经验神圣化的错误倾向作坚决斗争的基础上逐步形成的。**
+
+028.土地革命中的阶级路线：
+
+1. 依靠贫农、雇农
+2. 联合中农
+3. 限制富农
+4. 保护中小工商业者，消灭地主阶级。
 
 ### 第六章 中华民族的抗日战争
 
@@ -2065,7 +2198,7 @@
 | 太平天国                            | 《天朝田亩制度》                                             |
 | 辛亥革命                            | 民生主义《平均地权》                                         |
 | 大革命时期                          | 《平均地权，节制资本》（后来发展为耕者有其田、新三民主义）   |
-| 土地革命战争时期                    | 开展土地革命，就是要**消灭**封建地主的土地**私有制**，**实行**农民的土地**私有制**(消灭私有变私有)，使广大农民在政治上得到翻身，农村生产力得到解放和发展。《井冈山土地法》**没收一切土地**(有点激进)；《兴国土地法》**没收一切公共土地以及地主阶级的土地**；坚定地依靠贫农、雇农，联合中农、**限制富农**，保护中小工商业者，**消灭地主阶级**；**第一个可以付诸实施的纲领**(**耕者有其田**) |
+| 土地革命战争时期                    | 开展土地革命，就是要**消灭**封建地主的土地**私有制**，**实行**农民的土地**私有制**(消灭私有变私有)，使广大农民在政治上得到翻身，农村生产力得到解放和发展。<br />毛泽东和邓子恢一起制定的**土地分配方法**是：**以乡为单位，按人口平分土地，在原耕地的基础上，实行抽多补少、抽肥补瘦** <br />《井冈山土地法》**没收一切土地**(有点激进)；<br />《兴国土地法》**没收一切公共土地以及地主阶级的土地**；坚定地依靠贫农、雇农，联合中农、**限制富农**，保护中小工商业者，**消灭地主阶级**；**第一个可以付诸实施的纲领**(**耕者有其田**) |
 | 抗日战争                            | **允许富农收租，减租减息**，发展生产。（**没有耕者有其田**，**削弱**了土地剥削） |
 | 解放战争（土地改革时期）            | 《五四指示》地主剥削土地转移到农民手中(耕者有其田)，用一切方法吸收中农参加运动，**决不可侵犯**中农土地；**一般不变动**富农土地(或者说**征收富农多余土地**)，**废除了土地剥削**。《中国土地法大纲》——废除封建半封建性土地剥削制度，实行耕者有其田的土地制度 |
 | 三大改造前三年(1949-1953  建国初期) | 《中华人民共和国土地改革法》规定了这次土改的目的，是废除地主阶级封建剥削的土地所有制，**实行农民的土地所有制**，解放农村生产力，发展农业生产，为新中国工业化开辟道路。对富农的政策——**保存富农经济(建国初期时)**。 |
@@ -2087,6 +2220,36 @@
 2. **中国共产党**的中流砥柱作用是中国人民抗日战争胜利的**关键**。
 3. **全民族抗战**是中国人民抗日战争胜利的**重要法宝**
 
+029.抗日民族统一战线**初步形成**：
+
+1. 西安事变的和平解决（1936年12月12日）
+2. 国民党五届三中全会（1937年2月15日至22日，南京）
+
+030.以国共两党合作为基础的抗日民族统一战线**正式形成**的标志：
+
+1. 国民党中央通讯社发表《中共中央为公布国共合作宣言》（1937年9月22日）
+2. 蒋介石发表实际上承认中国共产党合法地位的谈话（1937年9月23日）
+
+031.1939年7月，为了应对国民党亲美派的消极抗日、积极反共政策，中国共产党明确提出三大口号：
+
+1. “坚持抗战到底，反对中途妥协”
+2. “巩固国内团结，反对内部分裂”
+3. “力求全国进步，反对向后倒退”
+
+032.在全党开展**整风运动，原因**在于：
+
+1. 曾给党的事业造成严重危害的**主观主义、教条主义，没有来得及从思想上进行认真的清理**。
+2. 随着党队伍的扩大，一大批出生农民和其他小资产阶级的新党员身上存在着各种非无产阶级思想。
+3. 老党员要适应新形势，也需要进一步提高自己。
+
+（注意：和共产国际解散没关系，共产国际是整风运动以后的一年，1943年解散的）
+
+033.从法律上确认台湾是中国领土的一部分。这些具有国际法律效力的文件有：
+
+1. 1943年12月1日**《开罗宣言》**：中、美、英三国之宗旨在使日本所窃取于中国之领土，例如**东北、台湾、澎湖列岛等**，归还中国。
+2. 1945年7月26日，中、美、英三国共同签署、苏联后来加入的**《波茨坦公告》**，重申**“开罗宣言之条件必将实施。”**
+3. 1945年9月，日本签署**《日本投降条款》**，**承诺“忠诚履行波茨坦公告各项规定之义务”**。
+
 ### 第七章 为建立新中国而奋斗
 
 62.1945年8月25日，中共中央在**《对目前时局的宣言》**中明确提出的口号是：**和平、民主、团结**
@@ -2099,7 +2262,7 @@
 
 66.中国各民主党派从成立起，大多同中国共产党建立了不同程度的合作关系，并在斗争实践中逐步发展了这种关系，这是由于各民族党派的政纲不尽相同，但都主张爱国、反对卖国，主张民主，反对独裁。在这些方面，**中国共产党的新民主主义革命政纲基本上一致**。
 
-67.1948年4月30日，中共中央在纪念五一国际劳动节的口号中提出：“各民主党派、各人民团体、各社会贤达迅速召开政治协商会议，讨论并实现召集人民代表大会，成立民主联合政府。”**揭开了中国共产党同各党派、各团体、各族各界人士协商建国的序幕，奠定了中共产党领导的多党合作和政治协商制度的基础。**
+67.1948年4月30日，中共中央在纪念**五一国际劳动节的口号**中提出：“各民主党派、各人民团体、各社会贤达**迅速召开政治协商会议**，讨论并实现**召集人民代表大会**，**成立民主联合政府**。”**揭开了中国共产党同各党派、各团体、各族各界人士协商建国的序幕，奠定了中共产党领导的多党合作和政治协商制度的基础。**
 
 68.**《对时局的意见》**这个政治声明表明，**中国各民主党派和无党派人士公开自愿接受中共产党的领导**。
 
@@ -2117,9 +2280,35 @@
 
 73.**七届二中全会**上，毛泽东强调必须保持的党的作风是：**谦虚、谨慎、不骄、不躁和艰苦奋斗的作风**。
 
+034.1945年8月，蒋介石连发三电，邀请毛泽东赴重庆谈判，这是因为：
+
+1. 全国人民强烈要求和平、反对内战
+2. 国民党的军队大部分远在西南、西北后方
+3. 国民党完成内战部署需要相当的时间
+4. 国际上苏联、美国等都表示希望中国能够和平建国
+
+035.解放战争的三个阶段：
+
+1. 战略防御（1946年6月至1947年6月）
+2. 战略反攻（1947年7月至1948年9月）
+3. 战略决战（1948年9月至1949年12月）
+
+036.揭开**战略进攻序幕**的是：
+
+1. 刘伯承、邓小平率领的晋冀鲁豫野战军主力，**千里跃进大别山**
+2. 陈毅、粟裕的华东野战军主力**挺进苏鲁豫皖地区**
+3. 陈赓、谢富治指挥的晋冀鲁豫野战军，**挺进豫西**
+
+037.抗日战争胜利后，某些民主党派的领导人物曾经鼓吹**“中间路线”**：
+
+1. 在政治上，“必须实现英美式的民主政治”，但不准地主官僚资本家操纵；
+2. 在经济上，“应当实行改良的资本主义”，但不容官僚买办资本横行。
+3. 实行的方法，则是**走和平改良的道路**。
+4. 他们所提倡的，是**资产阶级共和国的方案**；他们所主张的，实质上是**旧民主主义的道路**。
+
 ### 第八章 中华人民共和国的成立与中国社会主义建设道路的探索
 
-74.完成**民主革命遗留任务**的是：**在新解放区进行土改**
+74.完成**民主革命遗留任务**的是：**在新解放区进行土改**、在全国开展镇压反革命的运动
 
 75.**社会主义革命**任务：
 
@@ -2149,20 +2338,31 @@
 
 83.解决人民内部矛盾的具体方针、原则：
 
-| 不同领域                   | 方针                                                   |
-| -------------------------- | ------------------------------------------------------ |
-| 政治思想领域               | 团结—批评—团结                                         |
-| 物质利益、分配方面         | 统筹兼顾、适当安排，兼顾国家、集体和个人三方面利益     |
-| 人民群众和政府机关的矛盾   | 民主集中制，克服官僚主义，加强对群众的思想教育         |
-| 科学文化领域               | 百花齐放、百家争鸣                                     |
-| 共产党和民主党派之间的矛盾 | 坚持社会主义道路和共产党领导前提下“长期共存、互相监督” |
-| 民族之间的矛盾             | 民主平等、团结互助的方针                               |
+| 不同领域                   | 方针                                                       |
+| -------------------------- | ---------------------------------------------------------- |
+| 政治思想领域               | 团结—批评—团结                                             |
+| 物质利益、分配方面         | **统筹兼顾、适当安排**，兼顾国家、集体和个人三方面利益     |
+| 人民群众和政府机关的矛盾   | 民主集中制，克服官僚主义，加强对群众的思想教育             |
+| 科学文化领域               | 百花齐放、百家争鸣                                         |
+| 共产党和民主党派之间的矛盾 | 坚持社会主义道路和共产党领导前提下“**长期共存、互相监督**” |
+| 民族之间的矛盾             | 民主平等、团结互助的方针                                   |
 
 84.1956年**中共八大**指出，我国国内主要矛盾是**“人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾”**。全国人民的**主要任务**是**集中力量发展社会生产力，实现国家工业化，逐步满足人民日益增长的物质文化需要。**
 
 85.**中共八大**确定的我国社会主义经济建设的方针是：**既反保守又反冒进，在综合平衡中稳步前进**。
 
 86.1961年1月，**中共八届九中全会**决定，从1961年起两三年内对国民经济实行**“调整、巩固、充实、提高”**的**方针**。
+
+038.过渡时期总路线是要**解决无产阶级与资产阶级的矛盾**，使我国由新民主主义社会进入社会主义社会。
+
+039.我国步入**社会主义改革时期**是**20世纪70年代末**。
+
+040.中华人民共和国成立、社会主义制度的建立：
+
+1. 是中国历史上最深刻最伟大的社会变革
+2. 为当代中国一切发展进步奠定了根本政治前提和制度基础
+3. 为中国发展富强、中国人民生活富裕奠定了坚实基础
+4. **实现了中华民族由不断衰弱到根本扭转命运、持续走向繁荣富强的伟大飞跃。**
 
 ### 第九章 改革开放于中国特色社会主义的开创和发展
 
@@ -2183,37 +2383,57 @@
 
 89.中共会议：
 
-| 中共会议                           | 时间地点            | 内容                                                         |
-| ---------------------------------- | ------------------- | ------------------------------------------------------------ |
-| 中共一大                           | 1921年7月23日       | 一大建党                                                     |
-| 中共二大                           | 1922年              | 二大纲；第一次提出党的**反帝反封建的民主革命纲领**；第一次提出**党的统一战线思想**；第一次**公开发表《中国共产党宣言》**；制定了**第一部《中国共产党章程》** |
-| 中共三大                           |                     | 全体共产党员一个人名义加入国民党，同孙中山领导的国民党建立统一战线(共产党丧失独立自主地位) |
-| 八七会议                           | 1927年              | 1.会议彻底清算了大革命后期的陈独秀右倾机会主义错误(太依赖资产阶级)（正确态度：又联合又斗争）<br />2.确定了土地改革和武装反抗国民党反动统治的总方针。会议明确提出土地革命是中国资产阶级民主革命的**中心问题**<br />3.毛泽东提出**“枪杆子里出政权”**<br />中国革命处于严重危机情况下，八七会议的及时召开，并制定出继续革命的正确方针，为挽救党和革命作出巨大贡献。中国革命由此开启了由**大革命失败到土地革命战争兴起的历史性转变** |
-| 古田会议                           | 1929年              | 1.会议确立了**思想建党、政治建军的原则**，规定红军是一个执行革命的**政治任务**的武装集团，必须绝对服从共产党的领导，必须担负打仗、筹款和做群众工作的任务，必须加强政治工作<br />2.加强**思想建设**入手，保持党的无产阶级先锋队性质和建设党领导的新型人民军队的问题，这是人民军队完全有别于一切旧军队的政治特质和根本优势。 |
-| 中华苏维埃第一次全国工农兵代表大会 | 1931年              | 土地革命时期，在江西瑞金召开；通过了《中华苏维埃共和国宪法大纲》以及土地法令、劳动法等文件；选举产生了中华苏维埃共和国中央执行委员会；成立了**中华苏维埃共和国临时中央政府**，毛泽东当选为主席；实施**工农兵代表大会制度**；(换言之，第一次国共合作共产党既没有政权、也没有军队) |
-| 遵义会议                           | 1935年              | 解决了**军事问题和组织问题**；**政治问题(瓦窑堡会议)** **思想问题(延安整风运动)**生死攸关的转折点（三个生死攸关的转折点：八七会议、遵义会议和十一届三中全会），标志着中国共产党在政治上**开始走向成熟**；遵义会议的鲜明特点：**坚持真理、修正错误** |
-| 瓦窑堡会议                         | 1935年陕北          | **建立抗日民族统一战线**<br />1.阐明建立抗日民族统一战线的可能性（抗日民族统一战线策略总方针：发展进步势力，争取中间势力，孤立顽固势力）<br />2.批判了“左”倾关门主义错误，强调共产党在抗日民族统一战线中的领导作用（对顽固势力，既联合又斗争；原则：有理有利有节）<br />3.规定了建立广泛抗日民族统一战线的具体政策，决定以“人民共和国”代替“工农共和国” |
-| 洛川会议                           | 1937年              | 强调要打倒日本帝国主义，关键在于使已经发动的抗战成为**全面的全民族的抗战(全面抗战路线)**，以及**抗日救国十大纲领(抗日纲领)** |
-| 六届六中全会                       | 1938年              | 毛泽东  (《论新阶段》)**首次提出马克思主义中国化** <br />中共七大 (毛泽东)完成了**第一次结合的历史性飞跃**。 (新民主主义革命理论系统阐明，标志着毛泽东主义的成熟)<br />1956年  毛泽东提出马克思主义中国化第二次结合的任务《论十大关系》中提出                                        邓小平改革开放后完成了第二次结合的历史性飞跃，即中国特色社会主义理论成果<br />期间文章：《共产党人发刊词》《中国革命和中国共产党》《新民主主义论》；**革命道路理论确立于《战争与战略问题》** |
-| 重庆政治协商会议                   | 1946年              | 五项协定  1.政府组织 2.国民大会 3.和平建国纲领 4.宪法草案 5.军事问题 |
-| 七届二中全会(西柏坡会议)           | 1949年              | 1.提出迅速夺取全国胜利的方针：天津式、北平式、绥远式<br />2.党的**工作重心必须由乡村转移到城市**<br />3.指出了中国由农业国转变为工业国，由新民主主义社会转变为社会主义社会的总任务和主要途径<br />4.提出**“两个务必”**，务必使同志们继续保持谦虚、谨慎、不骄、不躁的作风，务必使同志保持艰苦奋斗的作风 |
-| 第一届人民政协会议                 | 1949年9月           | 《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议**共同纲领**》 |
-| 中共七大                           |                     | 规定**毛泽东思想为党一切工作的指针**                         |
-| 中共八大                           | 1956年              | 主要矛盾改变，基本任务——在新生产关系下保护和发展生产力；陈云提出——三个主体、三个补充；提出经济建设方针，既**反保守又反冒进即在综合平衡中稳步前进**； |
-| 中共八届九中全会                   | 1961年1月           | 决定国民经济实行的**方针是“调整、巩固、充实、提高”**         |
-| 十一届三中全会                     | 1978年12月18日-22日 | 重新确立党的思想路线、揭开了社会主义改革开放的序幕，中国**进入了改革开放和社会主义现代化建设的历史新时期**；实现了**新中国成立以来党的历史上具有深远意义的伟大转折**；1979年11月，邓小平对《决议》提出了指导原则，最**核心**一条是**确立毛泽东同志的历史地位，坚持和发展毛泽东思想**； |
-| 十一届六中全会                     | 1981年              | **第一次明确地提出了"我国的社会主义制度还处于初级阶段**。科学的评价的毛泽东同志和毛泽东思想，提出了毛泽东思想活的灵魂是三个方面；通过了《关于建国以来党的若干历史问题的**决议》**，**标志着党在指导思想上拨乱反正的胜利完成**。 |
-| 中共十二大                         |                     | **坚持和发展中国特色社会主义成为（改革开放以来）我们党全部理论和实践创新的主题**（也是习近平新时代中国特色社会主义思想的**核心要义**），邓小平在十二大明确提出**“建设有中国特色社会主义”这一具有里程碑意义的重大命题**（邓小平理论主题形成） |
-| 中共十三大                         | 1987年10月25日      | **把“社会主义初阶阶段”作为事关全局的国情加以把握，第一次对社会主义初级阶段理论做了系统的论述**，并提出了社会主义初级阶段的一个中心两个基本点的基本路线，我们党对中特理论进行系统概括，标志着**邓小平理论轮廓的形成** |
-| 南方谈话                           | 1992年1月           | 1.计划和市场都是手段 <br />2.阐明了社会主义本质 <br />3.提出了“发展才是硬道理的重要论断”<br />4.提出改革开放和各项工作成败得失的“三个有利于”标准 <br />5.强调加强党的建设 <br />6.关于社会主义初级阶段的长期性和前途<br />**邓小平理论走向成熟**；“**社会主义的本质是解放生产力，发展生产力，消灭剥削，消灭两极分化**” |
-| 中共十四大                         | 1992年10月          | 提出了我国**经济体制改革的目标**是**建立社会主义市场经济体制**(确定了我国社会主义市场经济的改革目标)，提出“**要使市场在社会主义国家宏观调控下对资源配置起==基础性==作用**” |
-| 中共十五大                         | 1997年9月           | **邓小平理论**同马克思列宁主义毛泽东思想一起，**确立为指导思想写入党章**。大会**提出党在社会主义初级阶段的基本纲领**。 |
-| 中共十六大                         | 2002年              | 全面建设小康社会的奋斗目标                                   |
-| 中共十七大                         |                     | **中特理论体系**                                             |
-| 中共十八大                         | 2012年              | 改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；**新发展理念**是**最重要、最主要**的。中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。 |
-| 中共十九大                         |                     | 党的十九大报告提出**新时代党的建设总要求**，提出把党的**政治建设摆在首位**，以**政治建设为统领**深入推进党的建设 |
-| 十九届四中全会                     |                     | 指出**社会主义基本经济制度**：“**公有制为主体，多种所有制经济共同发展，按劳分配为主体，多种分配方式并存，社会主义市场经济体制等**” |
-| 十九届五中全会                     |                     | 进入新发展阶段，完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕**问题；全会**最重要成果**是审议通过了《中共中央关于党的百年奋斗成就和历史经验的决议》，对习近平新时代中国特色社会主义思想的概括阐述，是《决议》的一个**突出亮点**，也是一个**重大贡献**； |
+| 中共会议                           | 时间地点                    | 内容                                                         |
+| ---------------------------------- | --------------------------- | ------------------------------------------------------------ |
+| 中共一大                           | 1921年7月23日               | 一大建党                                                     |
+| 中共二大                           | 1922年                      | 二大纲；<br />第一次提出党的**反帝反封建的民主革命纲领（彻底的）**；<br />第一次提出**党的统一战线思想——民主主义的联合战线的思想**；<br />第一次**公开发表《中国共产党宣言》**；<br />制定了**第一部《中国共产党章程》**<br />第一次明文提出“中国共产党万岁”的口号<br />最高纲领：建立劳农专政的政治、铲除私有财产制度，渐次达到一个共产主义的社会 |
+| 中共三大                           | 1923年6月-广州              | 1.正确估计了孙中山的革命立场和国民党进行改革的可能性。<br />2.全体共产党员一个人名义加入国民党，同孙中山**领导**的国民党**建立统一战线（大革命失败前）**(共产党**丧失独立自主地位**，是国共合作的倡导者和统一战线的组织者，但非领导者)<br />3.明确规定共产党员加入国民党时，党必须在政治上、思想上、组织上保持自己的独立性 |
+| 八七会议                           | 1927年8月7日-湖北汉口       | 1.会议彻底清算了大革命后期的陈独秀右倾机会主义错误(太依赖资产阶级)（正确态度：又联合又斗争）<br />2.确定了**土地改革和武装反抗国民党反动统治的总方针**。会议明确提出土地革命是中国资产阶级民主革命的**中心问题**<br />3.毛泽东提出**“枪杆子里出政权”**<br />中国革命处于严重危机情况下，八七会议的及时召开，并制定出继续革命的正确方针，为挽救党和革命作出巨大贡献。中国革命由此开启了由**大革命失败到土地革命战争兴起的历史性转变** |
+| 古田会议                           | 1929年                      | 1.会议确立了**思想建党、政治建军的原则**，规定红军是一个执行革命的**政治任务**的武装集团，必须绝对服从共产党的领导，必须担负打仗、筹款和做群众工作的任务，必须加强政治工作<br />2.加强**思想建设**入手，保持党的无产阶级先锋队性质和建设党领导的新型人民军队的问题，这是人民军队完全有别于一切旧军队的政治特质和根本优势。 |
+| 中华苏维埃第一次全国工农兵代表大会 | 1931年                      | 土地革命时期，在江西瑞金召开；通过了《中华苏维埃共和国宪法大纲》以及土地法令、劳动法等文件；选举产生了中华苏维埃共和国中央执行委员会；成立了**中华苏维埃共和国临时中央政府**，毛泽东当选为主席；实施**工农兵代表大会制度**；(换言之，第一次国共合作共产党既没有政权、也没有军队) |
+| 遵义会议                           | 1935年                      | 解决了**军事问题和组织问题**；**政治问题(瓦窑堡会议)** **思想问题(延安整风运动，确立了实事求是的思想路线)**生死攸关的转折点（三个生死攸关的转折点：八七会议、遵义会议和十一届三中全会）<br />事实上**确立了毛泽东在党中央和红军的领导地位**，开始**形成以毛泽东同志为核心的党的第一代中央领导集体。<br />开启了党独立自主解决中国革命实际问题的新阶段。<br />标志着中国共产党在政治上**开始走向成熟**；遵义会议的鲜明特点：**坚持真理、修正错误** |
+| 瓦窑堡会议                         | 1935年陕北                  | **建立抗日民族统一战线**<br />1.阐明建立抗日民族统一战线的可能性（**抗日民族统一战线策略总方针：发展进步势力，争取中间势力，孤立顽固势力**）<br />2.**批判了“左”倾关门主义错误**，强调共产党在抗日民族统一战线中的领导作用（对顽固势力，既联合又斗争；原则：有理有利有节）<br />3.规定了建立广泛抗日民族统一战线的具体政策，决定以“人民共和国”代替“工农共和国” |
+| 洛川会议                           | 1937年                      | 强调要打倒日本帝国主义，关键在于使已经发动的抗战成为**全面的全民族的抗战(全面抗战路线)**，以及**抗日救国十大纲领(抗日纲领)：必须实行全国军事的总动员、全国人民的总动员** |
+| 六届六中全会                       | 1938年9月29日至11月6日-延安 | 毛泽东  (《论新阶段》)**首次提出马克思主义中国化** <br />中共七大 (毛泽东)完成了**第一次结合的历史性飞跃**。 (新民主主义革命理论系统阐明，标志着毛泽东主义的成熟)<br />**1956年**  毛泽东提出**马克思主义中国化第二次结合**的任务《论十大关系》中提出                                        邓小平改革开放后完成了第二次结合的历史性飞跃，即中国特色社会主义理论成果<br />进一步**巩固了毛泽东在全党的领导地位，统一了全党的思想和步调**，推动各项工作迅速发展。<br />期间文章：《<共产党人>发刊词》——把**党成立以来的历史经验概括为三大法宝**。《中国革命和中国共产党》《新民主主义论》；**革命道路理论确立于《战争与战略问题》** |
+| 中共七大                           | 1945年4月23日-延安          | 1.制定了**党的政治路线和新民主主义国家在政治、经济、文化方面的纲领**<br />2.标志着我们**党在政治上、思想上、组织上走向了成熟**<br />3.把**毛泽东思想确立为党的指导思想并写入党章**，规定**毛泽东思想为党一切工作的指针**，形成了一支**高举毛泽东旗帜的久经考验的政治家集团**。<br />4.总结党的建设的历史经验，把党在长期奋斗中形成的优良作风概括为**理论和实践相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风**。 |
+| 重庆政治协商会议                   | 1946年                      | 五项协定  1.政府组织 2.国民大会 3.和平建国纲领 4.宪法草案 5.军事问题 |
+| 七届二中全会(西柏坡会议)           | 1949年                      | 1.提出迅速夺取全国胜利的方针：天津式、北平式、绥远式<br />2.党的**工作重心必须由乡村转移到城市**<br />3.指出了中国**由农业国转变为工业国，由新民主主义社会转变为社会主义社会**的总任务和主要途径<br /><br />4.规定了党在全国胜利后，在政治、经济、外交方面应当采取的基本政策。<br />5.提出**“两个务必”**，务必使同志们继续保持**谦虚、谨慎、不骄、不躁**的作风，务必使同志保持**艰苦奋斗**的作风<br />6.1950年6月的七届三中全会制定的党在新中国成立初期的战略策略方针——**“不要四面出击”** |
+| 第一届人民政协会议                 | 1949年9月                   | 《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议**共同纲领**》 |
+| 中共八大                           | 1956年                      | 1.主要矛盾改变，明确提出新形势下党和人民的基本（主要）任务——在新生产关系下保护和发展生产力；<br />2.陈云提出——三个主体、三个补充；这是理论上突破苏联计划经济模式，探索经济体制改革的**重要尝试（十一届三中全会是真正突破计划经济模式）** <br />3.提出经济建设方针，既**反保守又反冒进即在综合平衡中稳步前进**； |
+| 中共八届九中全会                   | 1961年1月                   | 决定国民经济实行的**方针是“调整、巩固、充实、提高”**         |
+| 十一届三中全会                     | 1978年12月18日-22日         | 1.高度评价了关于**真理标准问题的讨论**；<br />2.重新确立马克思主义的**思想路线、政治路线、组织路线**；<br />3.揭开了社会主义改革开放的序幕，中国**进入了改革开放和社会主义现代化建设的历史新时期（停止使用“以阶级斗争为纲”口号，把工作重心转移到<u>社会主义现代化建设</u>上来）**；<br />4.实现了**新中国成立以来党的历史上具有深远意义的伟大转折**；<br />5.1979年11月，邓小平对《决议》提出了指导原则，最**核心**一条是**确立毛泽东同志的历史地位，坚持和发展毛泽东思想**；<br />6.开启了**改革开放和社会主义现代化建设新时期**； |
+| 十一届六中全会                     | 1981年                      | **第一次明确地提出了"我国的社会主义制度还处于初级阶段**。科学的评价的毛泽东同志和毛泽东思想，提出了毛泽东思想活的灵魂是三个方面；通过了《关于建国以来党的若干历史问题的**决议》**，**标志着党在指导思想上拨乱反正的胜利完成**。 |
+| 中共十二大                         |                             | **坚持和发展中国特色社会主义成为（改革开放以来）我们党全部理论和实践创新的主题**（也是习近平新时代中国特色社会主义思想的**核心要义**），邓小平在十二大明确提出**“建设有中国特色社会主义”这一具有里程碑意义的重大命题**（邓小平理论主题形成） |
+| 中共十三大                         | 1987年10月25日              | **把“社会主义初阶阶段”作为事关全局的国情加以把握，第一次对社会主义初级阶段理论做了系统的论述**，并提出了社会主义初级阶段的一个中心两个基本点的基本路线，我们党对中特理论进行系统概括，标志着**邓小平理论轮廓的形成** |
+| 南方谈话                           | 1992年1月                   | 1.**计划和市场都是手段** <br />2.阐明了**社会主义本质** <br />3.提出了**“发展才是硬道理的重要论断”**<br />4.提出改革开放和各项工作成败得失的“三个有利于”标准 <br />5.强调加强党的建设 <br />6.关于社会主义初级阶段的长期性和前途<br />**邓小平理论走向成熟**；“**社会主义的本质是解放生产力，发展生产力，消灭剥削，消灭两极分化**” |
+| 中共十四大                         | 1992年10月                  | 提出了我国**经济体制改革的目标**是**建立社会主义市场经济体制**(确定了我国社会主义市场经济的改革目标)，提出“**要使市场在社会主义国家宏观调控下对资源配置起==基础性==作用**” |
+| 中共十五大                         | 1997年9月                   | 1.**邓小平理论**同马克思列宁主义毛泽东思想一起，**确立为指导思想写入党章**。<br />2.大会**提出党在社会主义初级阶段的基本纲领**。<br />3.第一次明确提出，**公有制为主体、多种所有制经济共同发展，是我国社会主义初级阶段的基本经济制度，非公有制经济是我国社会主义市场经济的重要组成部分。** |
+| 中共十六大                         | 2002年                      | 全面建设小康社会的奋斗目标                                   |
+| 中共十七大                         |                             | **中特理论体系**                                             |
+| 中共十八大                         | 2012年                      | 1.改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；<br />2.**新发展理念**是**最重要、最主要**的。<br />3.中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。<br />4.主要任务是：实现第一个百年奋斗目标、开启实现第二个百年奋斗目标新征程、朝着实现中华民族伟大复兴的宏伟目标继续前进。 |
+| 中共十九大                         | 2017年10月18日24日-北京     | 党的十九大报告提出**新时代党的建设总要求**，提出把党的**政治建设摆在首位**，以**政治建设为统领**深入推进党的建设 |
+| 十九届四中全会                     |                             | 指出**社会主义基本经济制度**：“**公有制为主体，多种所有制经济共同发展，按劳分配为主体，多种分配方式并存，社会主义市场经济体制等**” |
+| 十九届五中全会                     |                             | 进入新发展阶段，完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕**问题；全会**最重要成果**是审议通过了《中共中央关于党的百年奋斗成就和历史经验的决议》，对习近平新时代中国特色社会主义思想的概括阐述，是《决议》的一个**突出亮点**，也是一个**重大贡献**； |
+| 中共二十大                         | 2022年10月16日-22日-北京    | 报告指出，从现在起，中国共产党的中心任务是：①团结带领全国各族人民全面建成社会主义现代化强国、实现第二个百年奋斗目标②以中国式现代化全面推进中华民族伟大复兴 |
+
+1924年1月，标志着**国共合作正式形成**的**国民党一大**在广州召开，大会对三民主义作出了新的解释，主要表现在：
+
+1. 突出反帝内容
+2. 强调民主权利应“为一般平民所共有”，不应为“少数人所得而私有”
+3. 民生主义概括为“平均地权”和“节制资本”两大原则
+4. 事实上确立了**联俄、联共、扶助农工**三大革命政策
+
+1927年7月中旬，中共中央政治局临时常委会决定：
+
+1. 将党所掌握和影响的部队向南昌集中，准备起义
+2. 组织湘、鄂、赣、粤四省的农民发动秋收起义
+3. 召集中央紧急会议，讨论和决定大革命失败后的新方针
+
+041.关于真理标准问题的大讨论：
+
+1. 是一场深刻而广泛的马克思主义思想解放运动
+2. 成为正本清源、拨乱反正和改革开放的先导
+3. 使党内外开始出现酝酿对外开放和对各方面体制进行改革的新局面
 
 ### 第十章 中国特色社会主义进入新时代
 
@@ -2230,3 +2450,12 @@
 91.经济有关话题的必要性回答模板：
 
 这是适应把握引领经济发展新常态的重大创新，是适应国际金融危机发生后综合国力竞争新形势的主动选择，是推动我国经济实现高质量发展的必然要求。
+
+042.
+
+
+
+## 思想道德修养与法治
+
+### 绪论 当担复兴大任 成就时代新人
+
