:memo:思想道德修养与法治 part1 完结

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -2153,7 +2153,7 @@
 | 延安整风运动（1942年2月）                  | 《改造我们的学习》-学风(党的高级干部) <br />《整顿党的作风》-党风(全党党员)<br />《反对党八股》-文风(全党党员)   <br />**延安整风运动**，对待犯错误同志的正确方针：**惩前毖后、治病救人**<br />**一切从实际出发（前提）、理论联系实际（途径和方法）、实事求是(实质、核心)、在实践中检验的和发展真理(验证条件、目的)**的==思想路线==**在全党范围确立起来**。 |
 | 新中国成立                                 | 《论人民民主专政》总结我们是工人阶级领导的，以工农联盟为基础的人民民主专政。我们还必须利用一切有利而不是有害城乡资本主义因素，团结民族资产阶级。民族资产阶级不能充当革命的领导者，也不应该在国家政权中占主要地位 |
 | 探索社会主义道路阶段                       | 《论十大关系》基本**方针**——调动国内外一切积极因素为社会主义服务，是马义中国化**第二次结合**的标志，也是中国共产党人**开始探索社会主义道路的标志**。<br />《关于正确处理人民内部矛盾的问题》——仍然存在敌我矛盾、人民内部矛盾，正确处理人民内部矛盾是国家政治的主题<br />《一九五七年夏季的形势》——**六又政治局面**<br />《在晋绥干部会议上的讲话》1948年，**完整阐述了总路线的内容** |
-| 改革开放时期                               | 邓小平《解放思想、实事求是、团结一致向前看》——是党的十一届三中全会的**主题报告**，是解放思想、开辟新时期新道路的**宣言书**(第二个宣言书是南方谈话) |
+| 改革开放时期                               | 邓小平《解放思想、实事求是、团结一致向前看》——是党的十一届三中全会的**主题报告**，是解放思想、开辟新时期新道路、开创中国特色社会主义新理论的**宣言书**(第二个宣言书是南方谈话，是把改革开放和现代化建设推向新阶段的又一个解放思想、实事求是的宣言书) |
 
 026.井冈山根据地的建立：
 
@@ -2410,7 +2410,7 @@
 | 中共十五大                         | 1997年9月                   | 1.**邓小平理论**同马克思列宁主义毛泽东思想一起，**确立为指导思想写入党章**。<br />2.大会**提出党在社会主义初级阶段的基本纲领**。<br />3.第一次明确提出，**公有制为主体、多种所有制经济共同发展，是我国社会主义初级阶段的基本经济制度，非公有制经济是我国社会主义市场经济的重要组成部分。** |
 | 中共十六大                         | 2002年                      | 全面建设小康社会的奋斗目标                                   |
 | 中共十七大                         |                             | **中特理论体系**                                             |
-| 中共十八大                         | 2012年                      | 1.改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；<br />2.**新发展理念**是**最重要、最主要**的。<br />3.中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。<br />4.主要任务是：实现第一个百年奋斗目标、开启实现第二个百年奋斗目标新征程、朝着实现中华民族伟大复兴的宏伟目标继续前进。 |
+| 中共十八大                         | 2012年                      | 1.改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；<br />2.**新发展理念**是**最重要、最主要**的。<br />3.中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。<br />4.主要任务是：实现第一个百年奋斗目标、开启实现第二个百年奋斗目标新征程、朝着实现中华民族伟大复兴的宏伟目标继续前进。<br />5.报告创造性地提出“24个字”——“富强、民主、文明、和谐,自由、平等、公正、法治,爱国、敬业、诚信、友善” |
 | 中共十九大                         | 2017年10月18日24日-北京     | 党的十九大报告提出**新时代党的建设总要求**，提出把党的**政治建设摆在首位**，以**政治建设为统领**深入推进党的建设 |
 | 十九届四中全会                     |                             | 指出**社会主义基本经济制度**：“**公有制为主体，多种所有制经济共同发展，按劳分配为主体，多种分配方式并存，社会主义市场经济体制等**” |
 | 十九届五中全会                     |                             | 进入新发展阶段，完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕**问题；全会**最重要成果**是审议通过了《中共中央关于党的百年奋斗成就和历史经验的决议》，对习近平新时代中国特色社会主义思想的概括阐述，是《决议》的一个**突出亮点**，也是一个**重大贡献**； |
@@ -2459,3 +2459,181 @@
 
 ### 绪论 当担复兴大任 成就时代新人
 
+1.
+
+01.
+
+### 第一章 领悟人生真谛 把握人生方向
+
+2.对于人的认识，核心在于认识**人的本质**。
+
+3.**人生目的**是**人生观的核心**。
+
+4.人生目的、人生态度和人生价值
+
+* 人生目的：表明人的一生追求什么，回答**人为什么活着**
+* 人生态度：表明以怎样的心态实现人生目标，回答**人应当如何活着**
+* 人生价值：回答**什么样的人生才有价值**，即人怎样活着有意义
+
+5.个人与社会的关系，**最根本的是人的自然属性与社会属性的关系**。
+
+### 第二章 追求远大理想 坚定崇高信念
+
+6.信念具有：
+
+1. 执着性：一旦形成，不易改变
+2. 支撑性：精神力量、凝聚力
+3. 多样性：不同层次和类型，最高为信用
+
+7.理想具有：
+
+1. 超越性
+2. 实践性
+3. 时代性
+
+8.社会主义核心价值观具有：
+
+1. 先进性
+2. 人民性
+3. 真实性
+
+### 第三章 继承优良传统 弘扬中国精神
+
+9.**骨肉同胞之爱**反映了**对民族利益共同体的自觉认同**，是**检验一个人对祖国忠诚程度的试金石**。
+
+10.新时代爱国主义教育的**鲜明主题**：**全面建成社会主义现代化强国、实现中华民族伟大复兴**（提法二：**实现中华民族的伟大复兴中国梦**）
+
+### 第四章 明确价值要求 践行价值准则
+
+11.社会主义核心价值观的**根本特性**：人民性
+
+12.社会主义核心价值观的**先进性**集中体现在：它**是社会主义所坚持和追求的价值理念**
+
+### 第五章 遵守道德规范 锤炼道德品格
+
+13.**劳动**创造了人和人类社会，是**道德起源**的**第一个历史前提**。
+
+14.**道德的产生、发展和变化**，归根结底源于社会**经济关系**。
+
+15.**道德**在本质上是**知行合一**的。
+
+16.道德的功能系统中，**认识功能、规范功能、调节功能**是**最基本的功能**，此外还有**导向、激励、教育**等功能。
+
+* 认识功能：道德反映社会关系，特别是反映社会经济关系的功效与能力
+* 规范功能：指在正确善恶观的指引下，规范社会成员在社会公共领域、职业领域、家庭领域的行为，并规范个人品德的养成，引导并促进人民崇德向善
+* 调节功能：通过评价等方式指导和纠正人民的行为和纠正人民的行为和实践活动、协调社会关系和人际关系的功效与能力。
+
+17.**道德调节**的主要形式：**道德评价**。
+
+18.我国**社会主义道德的核心**是**为人民服务**，**原则**是**集体主义**。
+
+19.集体主义的三个层次：
+
+1. 顾全大局、遵纪守法、热爱祖国、诚实劳动：公民最基本的道德要求
+2. 先公后私、先人后己：较高社会主义道德觉悟的人能够达到的要求
+3. 无私奉献、一心为公：集体主义的最高层次，优秀共产党员、先进分子应努力达到的道德目标
+
+20.中华传统美德的**根本要求**：**公义胜私欲**
+
+21.中国**革命道德的灵魂**：**坚持社会主义和共产主义理想信念**
+
+22.贯穿中国革命道德始终的**一根红线**：**全心全意为人民服务**
+
+23.家庭美德主要内容包括：尊老爱幼、男女平等、夫妻和睦、勤俭持家、**邻里互助**。
+
+24.**个人品德**在社会道德建设中具有**基础性作用**。**社会公德、职业道德和家庭美德**建设，最终都要落实到**个人品德**的养成上。
+
+25.积极有效的道德修养方法：
+
+1. 学思并重：通过虚心学习，积极思索，辨别善恶，学善戒恶，以涵养良好的德行；
+2. 省察克治：反省检验以发现自己思想与行为中的不良倾向，并及时对它们进行抑制和克服；
+3. 慎独自律：强调在“隐”和“微”上下功夫，是对个人内心深处比较隐蔽的意识、情绪进行管理和自律的一种修养方法；
+4. 知行合一：把提高道德认识与躬行道德实践统一起来，以促进道德要求内化为个人的道德品质，外化为实际的道德行为
+5. 积善成德：通过积累善行或美德，使之巩固强化，以逐渐凝结成优良的品德
+
+26.志愿服务的精神是：**奉献、友爱、互助、进步**。其中**奉献**是**精髓**。
+
+### 第六章 学习法治思想 提升法治素养
+
+27.**国家强制性**是**法律规范区别于其他社会规范的一个重要特征**。
+
+28.**物质资料生产方式（包括生产力+生产关系两方面）**，对法律本质、内容和发展方向产生**决定性影响**。
+
+29.我国社会主义法律的运行：
+
+1. **法律制定**（法律运行的**起始性和关键性环节**）：指有立法权的国家机关按照法定职权和程序制定规范性法律文件的活动。**法律制定是国家对权利和义务，即社会利益和负担进行的权威性分配**。
+2. **法律执行**（行政执法是法律实施和实现的重要环境）：**广义上**，指国家机关及其公职人员，在国家和公共事务管理中依照法定职权和程序，贯彻和实施法律的活动。**狭义上**，是指国家行政机关及其公职人员执行法律的活动，也被称为**行政执法**。
+3. **法律适用**（司法）：指国家司法机关及其公职人员**依照法定职权和程序适用法律处理案件**的专门活动。
+4. **法律遵守**（依法办事，即守法）：指国家机关、社会组织和公民个人依照法律规定行使权力或权利以及履行职责或义务的活动。**守法是法律实施和实现的基本途径**。
+
+30.中国特色社会主义法治道路**本质**上是：**中国特色社会主义道路在法治领域的具体体现**
+
+31.**党的领导**是中国特色社会主义**法治之魂**，是我们的法治同西方资本主义国家的法治**最大的区别**。宪法的**最显著特征**：确认了中国共产党的领导地位。
+
+32.**社会主义法律和社会主义道德在性质、作用和目标上的一致性**，决定了建设中国特色社会主义法治国家，必须一手抓法治、一手抓德治，**坚持依法治国和以德治国相结合**。
+
+33.法治和德治**实现方式和实施载体不同**，**内在要求和表现形式也不同**。
+
+34.建设中国特色社会主义法治体系（全面依法治国的总抓手）
+
+1. 完备的法律规范体系（**前提**）
+2. 高效的法治实施体系（**重点**）
+3. 严密的法治监督体系（**重要保障**）
+4. 有力的法治保障体系（**重要依托**）
+5. 完善的党内法规体系（本质要求和重要内容）
+
+35.坚持法治国家、法治政府、法治社会相辅相成，一体建设：
+
+1. 法治国家是法治建设的**目标**；
+2. 法治政府是建设法治国家的**重点**（重点任务与主体工程）；
+3. 法治社会是构筑法治国家的**基础**；
+
+36.坚持全面推进科学立法、严格执法、公正司法、全民守法
+
+1. 科学立法（全面依法治国的**前提**）
+2. 严格执法（全面依法治国的**关键**）
+3. 公正司法（全面依法治国的**重点**）
+4. 全民守法（全面依法治国的**基础**）
+
+37.**法律至上**的具体表现：
+
+1. **普遍适用**：指法律在本国**主权范围内对所有人具有普遍的约束力**
+2. **优先适用**：指当同一项社会关系同时受多种社会规范的调整，而**多种社会规范又相互矛盾是，要优先考虑法律规范的适用**。
+3. **不可违反**：指**任何人无论权力大小、职位高低，法律必须遵守**。
+
+38.公平正义主要包括：
+
+1. **权利公平**：①权利主体平等②享有的权利平等③权利保护和权利救济平等
+2. **机会公平**：社会成员拥有相同的发展机会和发展前景
+3. **规则公平**：
+4. **救济公平**：
+
+39.**权利保障**的具体内容：
+
+1. 宪法保障是**前提和基础**；
+2. 立法保障是**重要条件**；
+3. 行政保障是**关键环节**；
+4. 司法保障是**最后防线**；
+
+40.**程序正当**的表现：
+
+1. **合法性**：程序运行合乎法律规定，有关机关或个人不得违反或变相违反；
+2. **中立性**：程序设计和运行应平等地对待双方当事人，不得偏向任何一方；
+3. **参与性**：案件或纠纷的利害关系人都有机会进入办案程序，充分表达自己的利益诉求和意见主张；
+4. **公开性**：程序运行的过程和结果应向当事人和社会公开，以接受各方监督，防止暗箱操作；
+5. **时限性**：程序运行必须有合理的期限，符合时间成本和效率原则的要求，不得无故拖延；
+
+41.马克思主义权利观与其他权力观的根本区别在于：**强调社会的物质生活条件对权力的制约和决定作用**；
+
+42.法律义务的特点：
+
+1. 法律义务是**历史的**：法律义务的内容和履行方式随着经济社会的发展和人权保障的进步而不断调整和变化；
+2. 法律义务**源于现实需要**：国家或地区的制度性质、历史传统、文化背景、宗教信仰和安全形势会对法律义务设定产生影响；
+3. 法律义务必须**依法设定**：**坚持义务法定，是建设法治国家和保障人权的重要方面**。法律义务必须由具有法定职权的国家机关按照法律程序设定，其他国家机关不得对公民违法设定法律义务；
+4. 法律义务**可能发生变化**：公民和社会组织承担的法律义务，在履行的过程中可能会基于法定情形而变更、消灭，或产生新的法律义务；
+
+43.**人身权利**是**公民参加国家政治、经济与社会生活的基础**，是公民权利的重要内容。
+
+44.**人身自由**是**人们一切行动和生活的前提条件**。
+
+45.享有**生命权**，是人享有其他权利的前提。
