--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -275,7 +275,7 @@
 
 37.由社会一定发展阶段的生产力所决定的**生产关系的总和就是经济基础**。
 
-38.上层建筑中，**政治上层**建筑居于**主导地位**，政治上层建筑的**核心是国家政权**。
+38.上层建筑中，**政治上层建筑**居于**主导地位**，**政治上层建筑**的**核心是国家政权**。
 
 39.**社会的发展和进步**集中表现为**社会形态的更替**。
 
@@ -1390,7 +1390,7 @@
 
 | 新发展理念 | 地位                                             | 解决                 |
 | ---------- | ------------------------------------------------ | -------------------- |
-| 创新       | 引领发展的第一动力                               | 发展动力问题         |
+| 创新       | 引领发展的**第一动力**                           | 发展动力问题         |
 | 协调       | 持续健康发展的内在要求                           | 发展不平衡问题       |
 | 绿色       | 永续发展的必要条件和人民对美好生活追求的重要体现 | 人与自然和谐共生问题 |
 | 开放       | 国家繁荣发展的必由之路                           | 发展内外联动问题     |
@@ -1515,10 +1515,10 @@
 
 028.加快**建设法治中国**必须全面推进（或者说全面依法治国的基本格局）：（习近平法治思想主要内容——十一个坚持之一）
 
-1. 科学立法(前提、龙头环节：为保障人权提供了坚实的法律体系)
-2. 严格执法(关键：为保障人权提供了良好的法治政府环境)
-3. 公正司法(重点：为保障人权提供了有力的司法救济途径)
-4. 全民守法(基础)
+1. 科学立法(**前提、龙头环节**：为保障人权提供了坚实的法律体系)
+2. 严格执法(**关键**：为保障人权提供了良好的法治政府环境)
+3. 公正司法(**重点**：为保障人权提供了有力的司法救济途径)
+4. 全民守法(**基础工程**)
 
 029.法治中国建设的**工作布局**是：
 
@@ -2459,15 +2459,20 @@
 
 ### 绪论 当担复兴大任 成就时代新人
 
-1.
+1.**法治**发挥作用要以**国家强制力为后盾**，是治国理政的**基本方式**；**德治**发挥作用要通过人们的内心信念、传统习俗、社会舆论等进行道德教化，并对违反道德的行为进行道德谴责，是治国理政的**重要方式**。
 
-01.
+01.既属于道德规范，又是法律规范的是：
+
+1. 爱国主义
+2. 诚实守信
+3. **尊重他人权力**
+4. 男女平等
 
 ### 第一章 领悟人生真谛 把握人生方向
 
 2.对于人的认识，核心在于认识**人的本质**。
 
-3.**人生目的**是**人生观的核心**。
+3.**人生目的**是**人生观的核心**，决定人生道路、人生态度、人生的价值选择。
 
 4.人生目的、人生态度和人生价值
 
@@ -2476,6 +2481,18 @@
 * 人生价值：回答**什么样的人生才有价值**，即人怎样活着有意义
 
 5.个人与社会的关系，**最根本的是人的自然属性与社会属性的关系**。
+
+02.**衡量人生价值的标准**：最重要的就是看一个人是否用自己的劳动和聪明才智为国家和社会真诚奉献，为人民群众尽心尽力服务。（干扰选项：衡量人生社会价值的标准是社会对自我的满足程度）
+
+03.**个人的自我价值**是**个体存在和发展的必要条件**；
+
+04.**推动和实现人的全面发展**是**社会发展的根本目标**。
+
+05.**评价人生价值大小**的方法：
+
+1. 既要看贡献的大小，也要看尽力的程度；
+2. 既要尊重物质贡献，也要尊重精神贡献；
+3. 既要注重社会贡献，也要注重自身完善；
 
 ### 第二章 追求远大理想 坚定崇高信念
 
@@ -2497,17 +2514,54 @@
 2. 人民性
 3. 真实性
 
+06.社会理想是个人理想的**汇聚和升华（不是叠加）**。
+
+07.**个人理想的实现**以**社会理想的实现为前提和基础**。
+
 ### 第三章 继承优良传统 弘扬中国精神
 
 9.**骨肉同胞之爱**反映了**对民族利益共同体的自觉认同**，是**检验一个人对祖国忠诚程度的试金石**。
 
 10.新时代爱国主义教育的**鲜明主题**：**全面建成社会主义现代化强国、实现中华民族伟大复兴**（提法二：**实现中华民族的伟大复兴中国梦**）
 
+08.中华民族崇尚精神的优秀传统表现为：
+
+1. 对物质和精神生活相互关系的独到理解
+2. 对理想的不懈追求
+3. 对品格养成的重视
+
+（没有涉及到法治、法律方面的内容）
+
+09.中国精神是兴国强国之魂，是：
+
+1. 推进复兴伟业的精神支柱
+2. 凝聚中国力量的精神纽带
+3. 激发创新创造的精神动力
+
+（中国精神属于**精神文明**的范畴，不涉及政治文明建设）
+
+010.关于爱国主义：
+
+* 爱国主义揭示了个人对祖国的依存关系
+* 爱国主义是**具体的**
+* 爱国主义是**现实的**
+* 爱国主义**不是永恒的**，它随着国家的发展而发展，在未来的共产主义社会，国家消亡后，爱国主义就会失去存在的条件和意义。
+
+010.爱社会主义**不属于爱国主义的基本内涵**，因为不同历史条件下所形成的爱国主义具有不同的内涵和特点。新民主主义革命时期，爱国主义主要表现为致力于推翻三座大山的反动统治，把黑暗的旧中国改造成光明的新中国。
+
+011.**文化**是**涵养民族心理、民族个性、民族精神的摇篮**；
+
 ### 第四章 明确价值要求 践行价值准则
 
 11.社会主义核心价值观的**根本特性**：人民性
 
 12.社会主义核心价值观的**先进性**集中体现在：它**是社会主义所坚持和追求的价值理念**
+
+012.**平等**是人类追求的**美好状态**（而非普世价值）。
+
+013.**社会主义核心价值观**把涉及**国家、社会、公民的价值要求融为一体**。
+
+014.世界观决定人生观，人生观决定价值观,价值观决定方法论。
 
 ### 第五章 遵守道德规范 锤炼道德品格
 
@@ -2553,6 +2607,42 @@
 
 26.志愿服务的精神是：**奉献、友爱、互助、进步**。其中**奉献**是**精髓**。
 
+015.道德是：
+
+1. 反映社会经济关系的特殊意识形态
+2. 社会利益关系的特殊调节方式
+3. **一种实践精神**
+
+016.作为社会意识的道德，其相对独立性表现为：
+
+1. 道德的历史继承性
+2. 道德对社会发展具有能动的反作用
+
+017.当代公共生活的特征主要表现在：
+
+1. 活动范围的广泛性
+2. 活动内容的开放性
+3. 交往对象的复杂性
+4. 活动方式的多样性
+
+018.**文明礼貌**是**调整和规范人际关系的行为准则**。
+
+019.有序的公共生活是：
+
+1. 社会生产活动的重要基础
+2. 提高生活成员生活质量的基本保障
+3. 社会文明的重要标志
+
+020.社会主义**职业道德**规范包括：
+
+1. 爱岗敬业
+2. 诚实守信
+3. 办事公道
+4. 热情服务
+5. 奉献社会**（最高层次的要求）**
+
+021.**职业活动不仅仅是人们谋生的手段**。
+
 ### 第六章 学习法治思想 提升法治素养
 
 27.**国家强制性**是**法律规范区别于其他社会规范的一个重要特征**。
@@ -2562,9 +2652,11 @@
 29.我国社会主义法律的运行：
 
 1. **法律制定**（法律运行的**起始性和关键性环节**）：指有立法权的国家机关按照法定职权和程序制定规范性法律文件的活动。**法律制定是国家对权利和义务，即社会利益和负担进行的权威性分配**。
-2. **法律执行**（行政执法是法律实施和实现的重要环境）：**广义上**，指国家机关及其公职人员，在国家和公共事务管理中依照法定职权和程序，贯彻和实施法律的活动。**狭义上**，是指国家行政机关及其公职人员执行法律的活动，也被称为**行政执法**。
+2. **法律执行**（**行政执法**是法律实施和实现的重要环节）：**广义上**，指国家机关及其公职人员，在国家和公共事务管理中依照法定职权和程序，贯彻和实施法律的活动。**狭义上**，是指国家行政机关及其公职人员执行法律的活动，也被称为**行政执法**。**行政执法必须坚持的原则**：**合法性、合理性、信赖保护、效率**。
 3. **法律适用**（司法）：指国家司法机关及其公职人员**依照法定职权和程序适用法律处理案件**的专门活动。
 4. **法律遵守**（依法办事，即守法）：指国家机关、社会组织和公民个人依照法律规定行使权力或权利以及履行职责或义务的活动。**守法是法律实施和实现的基本途径**。
+
+法律的**执行、适用、遵守**则是**把法律规范转化为法律实践，把法定的权利和义务转化为现实的权利和义务**。
 
 30.中国特色社会主义法治道路**本质**上是：**中国特色社会主义道路在法治领域的具体体现**
 
@@ -2576,7 +2668,7 @@
 
 34.建设中国特色社会主义法治体系（全面依法治国的总抓手）
 
-1. 完备的法律规范体系（**前提**）
+1. 完备的法律规范体系（是**前提**，是法治国家、法治政府，法治社会的**制度基础**）
 2. 高效的法治实施体系（**重点**）
 3. 严密的法治监督体系（**重要保障**）
 4. 有力的法治保障体系（**重要依托**）
@@ -2601,10 +2693,18 @@
 2. **优先适用**：指当同一项社会关系同时受多种社会规范的调整，而**多种社会规范又相互矛盾是，要优先考虑法律规范的适用**。
 3. **不可违反**：指**任何人无论权力大小、职位高低，法律必须遵守**。
 
+**法治思维**主要包括：
+
+1. 法律至上
+2. 权力制约
+3. 公平正义
+4. 权利保障
+5. 程序正当
+
 38.公平正义主要包括：
 
 1. **权利公平**：①权利主体平等②享有的权利平等③权利保护和权利救济平等
-2. **机会公平**：社会成员拥有相同的发展机会和发展前景
+2. **机会公平**：①起点平等②发展平等③**代际平等**
 3. **规则公平**：
 4. **救济公平**：
 
@@ -2637,3 +2737,68 @@
 44.**人身自由**是**人们一切行动和生活的前提条件**。
 
 45.享有**生命权**，是人享有其他权利的前提。
+
+022.“十一个坚持”中，科学指明了中国特色社会主义法治的前进方向的是：
+
+1. 坚持党对全面依法治国的领导（谁领导）
+2. 坚持以人民为中心（依靠谁）
+3. 坚持中国特色社会主义法治道路（走什么道路）
+
+023.走中国特色社会主义法治道路，是：
+
+1. 由我国社会主义国家性质所决定的
+2. 立足我国基本国情的必然选择
+3. **历史的必然结论**
+
+024.**习近平法治思想**是新时代**全面依法治国的指导思想和根本遵循**。
+
+025.平等是：
+
+1. 社会主义法律的基本属性
+2. 社会主义法治的基本要求
+
+026.**党的领导**是社会主义法治的最根本的保证，**人民**是依法治国的**主体和力量源泉**。
+
+027.**推进全面依法治国**，根本目的是**依法保障人民权益**。
+
+028.**发展**是解决一切问题的总钥匙。
+
+029.中国特色社会主义**法治道路的核心要义**，就是要：
+
+1. 坚持党的领导
+2. 坚持中国特色社会主义制度
+3. 坚持贯彻中国特色社会主义法治理论
+
+030.依法治国、依法执政、依法行政是一个有机整体，关键在于：
+
+1. 党要坚持依法执政
+2. 各级政府要坚持依法行政
+
+031.我国宪法具有最高的法律地位、法律权威、法律效益，具有：
+
+1. 根本性
+2. 全局性
+3. 稳定性
+4. 长期性
+
+032.**权利的法律保障**包括：
+
+1. 宪法保障
+2. 立法保障
+3. 行政保障
+4. 司法保障
+
+033.我国公民的**政治权利**：
+
+1. 选举权与被选举权
+2. 表达权
+3. 民主管理权
+4. 监督权
+
+034.**公民居住、生活、休息的场所不受非法侵入或搜查**的权利属于**住宅安全权利**。
+
+035.法律责任包括：
+
+1. 民事责任
+2. 行政责任
+3. 刑事责任
