--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -2765,7 +2765,7 @@
 2. 凝聚中国力量的精神纽带
 3. 激发创新创造的精神动力
 
-（中国精神属于**精神文明**的范畴，不涉及政治文明建设）
+（中国精神属于**精神文明**的范畴，不涉及**政治文明**建设）
 
 010.关于爱国主义：
 
@@ -2898,7 +2898,7 @@
 29.我国社会主义法律的运行：
 
 1. **法律制定**（法律运行的**起始性和关键性环节**）：指有立法权的国家机关按照法定职权和程序制定规范性法律文件的活动。**法律制定是国家对权利和义务，即社会利益和负担进行的权威性分配**。
-2. **法律执行**（**行政执法**是法律实施和实现的重要环节）：**广义上**，指国家机关及其公职人员，在国家和公共事务管理中依照法定职权和程序，贯彻和实施法律的活动。**狭义上**，是指国家行政机关及其公职人员执行法律的活动，也被称为**行政执法**。**行政执法必须坚持的原则**：**合法性、合理性、信赖保护、效率**。
+2. **法律执行**（**行政执法**是法律实施和实现的**重要环节**）：**广义上**，指国家机关及其公职人员，在国家和公共事务管理中依照法定职权和程序，贯彻和实施法律的活动。**狭义上**，是指国家行政机关及其公职人员执行法律的活动，也被称为**行政执法**。**行政执法必须坚持的原则**：**合法性、合理性、信赖保护、效率**。
 3. **法律适用**（司法）：指国家司法机关及其公职人员**依照法定职权和程序适用法律处理案件**的专门活动。
 4. **法律遵守**（依法办事，即守法）：指国家机关、社会组织和公民个人依照法律规定行使权力或权利以及履行职责或义务的活动。**守法（法律遵守）是法律实施和实现的基本途径**。
 
@@ -2918,7 +2918,7 @@
 2. 高效的法治实施体系（**重点**）
 3. 严密的法治监督体系（**重要保障**）
 4. 有力的法治保障体系（**重要依托**）
-5. 完善的党内法规体系（本质要求和重要内容）
+5. 完善的党内法规体系（**本质要求**和重要内容）
 
 35.坚持法治国家、法治政府、法治社会相辅相成，一体建设：
 
